# graph_hdc

./: .env  .gitignore  pyproject.toml  pytest.ini  ruff.toml
.claude/agents/: figure-table-suggester.md
Smiles/ZINC_smile/: debug_smile.txt
_artefacts/classification/: oracle_acc.csv  oracle_acc.parquet  training_comparison.csv  training_comparison.parquet
_artefacts/conditional_generation/hpos/: consolidated.ipynb
_artefacts/conditional_generation/qm9/: consolidated.ipynb
_artefacts/conditional_generation/zinc/: consolidated.ipynb
_artefacts/retrieval/: depth_ablations.ipynb  euclid_g3.csv  euclid_g3.ipynb  euclid_vs_cos.csv  euclid_vs_cos.ipynb  plots.ipynb  qm9_edge_encoding.csv  qm9_edge_encoding.ipynb
graph_hdc/: functions.py  models.py  utils.py
graph_hdc/experiments/hypernet_reconstruct/: 01_test.py  02_hypernet_reconstruct_multiple.py  04_hypernet_reconstruct_multiple_corrected_part2.py  _01_test.sh  _0_single_exp.sh  _2_recon_grid_search_four_only.sh  _3_recon_grid_search_four_only_test_run.sh  _4_recon_grid_search_twelve_only.sh  _5_recon_grid_search_four_only.sh
graph_hdc/experiments/test_hypernet_reconstruct/: 01_test.py
graph_hdc/special/: colors.py
notebooks/: altair_plots.ipynb  dataset_QM9.ipynb  dataset_QM9_with_degree.ipynb  distanc_based_sampling.ipynb  dump.ipynb  hypernet_sanity_check.ipynb  learning_graph_hd.ipynb  rewrite.ipynb  synthetic_dataset.ipynb  test.ipynb  torch_dump.ipynb  utils_jn.ipynb
notebooks/NormFlows/: neural_spline_flow.ipynb  neural_spline_flow_hypernet.ipynb  neural_spline_flow_hypernet_2.ipynb  neural_spline_no_pca_overfit.ipynb  real_nvp.ipynb  real_nvp_no_pca_overfit.ipynb
notebooks/dataset_transformations/: nha.ipynb
notebooks/datasets/: dataset_QM9.ipynb  dataset_ZINC.ipynb  dataset_ZINC_with_degree.ipynb  pairs_neg_pos_pca.ipynb  sample_data_for_graph_matching.ipynb  sample_data_for_graph_matching_f5.ipynb
notebooks/datasets/examples/: baseline_benchmarks.txt
notebooks/datasets/pairs/: qm9_pairs_stats.ipynb  zinc_pairs_dev_correctness.ipynb  zinc_pairs_stats.ipynb
notebooks/datasets/smiles/: 01_zinc_smiles_playground.ipynb  02_zinc_from_smiles_dataset_generation.ipynb  qm9_smiles_stats.ipynb  sa_score.ipynb  zinc_smiles_stats.ipynb  zinc_smiles_stats_feat5.ipynb
notebooks/decoding/: edge_decoding_hypernet.ipynb  oracle_decoding.ipynb  oracle_decoding_with_classifier.ipynb  oracle_decoding_with_classifier_faster.ipynb  oracle_decoding_with_classifier_faster_v2.ipynb  oracle_decoding_with_classifier_revisit.ipynb  oracle_decoding_with_sim_checks.ipynb
notebooks/gnn_decod/: gnn_decoder_01.ipynb  gnn_decoder_single_batch_gloab_id.ipynb  gnn_decoder_single_batch_no_order.ipynb  gnn_decoder_single_batch_no_order_with_edge_attr.ipynb  gnn_decoder_single_batch_per_graph_id.ipynb  gnn_decoder_single_node_nha.ipynb  gnn_decoder_single_node_nha_with_edge_noise_batch.ipynb  gnn_decoder_single_node_nha_with_edge_noise_one_sample.ipynb
notebooks/graph_encoders/: benchmarking_cartesian_product.ipynb  hypernet_decoder_jn.ipynb  hypernet_fruits_veggies.ipynb  hypernet_fruits_veggies_GraphHD.ipynb  hypernet_fruits_veggies_GraphHD_explain_away.ipynb  hypernet_fruits_veggies_expand_offset_HRR.ipynb  hypernet_fruits_veggies_expand_offset_MAP.ipynb  hypernet_fruits_veggies_expand_offset_MAP_HashTable.ipynb  hypernet_fruits_veggies_expand_offset_fruits_and_veggies.ipynb  save_load.ipynb
notebooks/pytorch_geometrie/: Tutorial14_data_handling_1.ipynb
notebooks/smiles/: 01_zinc_from_smiles.ipynb
notebooks/torchhd_notebooks/: autograd.ipynb  learning_torch_hd.ipynb  torchhd_dump.ipynb
src/: datasets.py  evaluation_metrics.py
src/datasets/: humo_lumo_gap_analysis.py  pairs_visualisation_pairs.py  pairs_visualisation_pairs_v2.py  qm9_pairs.py  qm9_smiles_generation.py  qm9_smiles_stats.py  sa_score.py  utils.py  zinc_pairs.py  zinc_pairs_v2.py  zinc_pairs_v3.py  zinc_smiles.py  zinc_smiles_generation.py  zinc_smiles_stats.py
src/datasets/plots/: dataset_presentation_plots.py
src/encoding/: configs_and_constants.py  correction_utilities.py  corrections.py  decoder.py  eval_classifiers.py  feature_encoders.py  gnn_example.py  graph_encoders.py  oracles.py  pca_encoder.py  the_types.py  z3_decoder.py
src/exp/classification/: 0_base_line.py  1_base_line_mlp copy.py  1_base_line_mlp.py  1x_base_line_mlp_edge.py  2_base_line_mlp_mirror.py  3_twin_towers.py  _0_baseline.sh  _1_baseline_mlp.sh  _1h_baseline_mlp.sh  _1x_baseline_mlp_edge.sh  _2_baseline_mlp_mirror.sh  _2h_baseline_mlp_mirror.sh  _3_twin_towers.sh  _3h_twin_towers.sh
src/exp/classification_v2/: 1_mlp.py  2_twin_towers.py  _1_baseline_mlp.sh  _1h_baseline_mlp.sh  _1u_baseline_mlp.sh  classification_utils.py
src/exp/classification_v3_gin/: 1_gin.py  (+11 more)
src/generation/: __init__.py  analyze.py  evaluator.py  generation.py  logp_regressor.py  property_regressor.py
src/normalizing_flow/: config.py  models.py  neural_spiral_network.py  normalizing_flow_models.py
src/rdkit/: dataset_generation.py
src/utils/: __init__.py  chem.py  nx_utils.py  registery.py  sampling.py  torchhd_hrr_patch.py  utils.py  visualisations.py
tests/: test_models.py  test_special_colors.py  test_special_molecules.py  test_utils.py  utils.py
tests_new/: __init__.py  conftest.py  test_data_transformations.py  test_evaluation_metrics.py  test_feature_encoders.py  test_graph_encoders.py  test_greedy_oracle_decoder.py  test_hypernet_hdc_decoder.py  test_induced_graph.py  test_pairs_edgeonly.py  test_torchhd_utils.py  test_utils.py  test_zinc_smiles_hdc_encodings.py
(+322 files in other folders)
