[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name         = "graph_hdc"
version      = "0.1.0"
description  = "Insert Description"
license      = "MIT"
authors      = ["Jonas Teufel <jonseb1998@gmail.com>"]
maintainers  = ["Jonas Teufel <jonseb1998@gmail.com>"]
readme       = "README.rst"
keywords     = []
packages     = [
    { include = "graph_hdc" },
    { include = "graph_hdc/experiments" },
]
include      = ["graph_hdc/VERSION"]

[tool.poetry.scripts]
graph_hdc = 'graph_hdc.cli:cli'

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
#pycomex = {path = "/Users/arvandkaveh/Projects/kit/pycomex", develop = true}
pycomex = ">=0.9.2"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
matplotlib = ">=3.5.3"
numpy = ">=1.23.2"
python-decouple = ">=3.6"
poetry-bumpversion = ">=0.3.0"
rich-click = ">=1.7.0,<=1.8.0"
jsonpickle = ">=4.0.1,<=5.0.0"
torch = ">=2.5,<2.7"
torch_geometric = "==2.6.1"
pytorch_lightning = "==2.4.0"
torch_hd = "*"
orjson = "^3.10.18"

[tool.poetry.group.dev.dependencies]
pytest = "*"
poetry-bumpversion = ">=0.3.0"
rdkit = "*"
chem_mat_data = "*"
jupyterlab = "^4.4.0"
ipykernel = "^6.29.5"
ruff = "^0.11.10"
pretty-errors = "^1.2.25"
tabulate = "^0.9.0"
pytest-benchmark = "^5.1.0"
scikit-learn = "^1.7.0"
pyarrow = "^20.0.0"
fastparquet = "^2024.11.0"



[tool.poetry_bumpversion.file."graph_hdc/VERSION"]
search = "{current_version}"
replace = "{new_version}"

[tool.poetry_bumpversion.file."README.rst"]
search = 'version-{current_version}-orange.svg'
replace = 'version-{new_version}-orange.svg'

[tool.poetry_bumpversion.file."graph_hdc/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
graph_hdc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytest = ">=8.4.0,<9"
pyarrow = ">=20.0.0,<21"
