[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "graph_hdc"
version = "0.1.0"
requires-python = ">=3.10"
description = "Graph HDC"
authors = [{ name = "Jonas Teufel <jonseb1998@gmail.com>" }]
license = "MIT"
readme  = "README.rst"

[tool.pixi.workspace]
channels  = ["pytorch", "nvidia", "pyg", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
graph_hdc        = { path = ".", editable = true }
# pip-only bits kept loose on purpose
torch-hd         = "*"
normflows        = ">=1.7.3"
auto-slurm       = { git = "https://github.com/the16thpythonist/AutoSlurm.git", rev = "aslurmx" }
pycomex          = ">=0.9.2"
rich-click       = ">=1.8.0"
jsonpickle       = ">=4.0.0"
python-decouple  = ">=3.6"

[tool.pixi.dependencies]
# Pin Python MAJOR.MINOR so PyG matches
python          = "3.11.*"

# Let conda figure out exact PT/PyG versions, but force GPU by asking for the CUDA runtime.
# If some clusters have older drivers, switch this one line to "12.1.*".
pytorch         = "*"
pytorch-cuda    = "*"
pyg             = "*"

# Everything else relaxed (conda)
pytorch-lightning = "*"
numpy             = "*"
matplotlib        = "*"
networkx          = ">=3.5,<4"
scikit-learn      = "*"
wandb             = "*"
orjson            = "*"
rdkit             = "*"
seaborn           = "*"
pyarrow           = "*"
jupyter_core      = "*"
jupyter_server    = "*"
jupyterlab        = "*"
ipywidgets        = "*"
decorator         = "*"
click             = ">=7.1.2"
jinja2            = ">=3.0.3"
pytorch-scatter = ">=2.1.2,<3"
ruff = ">=0.12.12,<0.13"
