[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "graph_hdc"
version = "0.1.0"
requires-python = ">=3.10"
description = "Graph HDC"
authors = [{ name = "Jonas Teufel <jonseb1998@gmail.com>" }]
license = "MIT"
readme  = "README.rst"

[tool.pixi.workspace]
channels  = ["pytorch", "nvidia", "pyg", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments.cluster]
features    = ["base"]
solve-group = "linux-64"

[tool.pixi.environments.local]
features    = ["base", "gpu"]
solve-group = "linux-64"

[tool.pixi.feature.base.dependencies]
python            = "3.11.*"
pytorch           = "*"
pyg               = "*"
pytorch-lightning = "*"
numpy             = "*"
matplotlib        = "*"
networkx          = ">=3.5,<4"
scikit-learn      = "*"
wandb             = "*"
orjson            = "*"
rdkit             = ">=2023.3.3,<2024"
seaborn           = "*"
pyarrow           = "*"
jupyter_core      = "*"
jupyter_server    = "*"
jupyterlab        = "*"
ipywidgets        = "*"
decorator         = "*"
click             = ">=7.1.2"
jinja2            = ">=3.0.3"
pytorch-scatter   = ">=2.1.2,<3"
ruff              = ">=0.12.12,<0.13"
pytest            = ">=8.4.2,<9"
optuna             = "*"
optuna-integration = "*"
botorch            = "*"
gpytorch           = "*"
setuptools         = "*"
altair-all         = "*"

[tool.pixi.pypi-dependencies]
graph_hdc        = { path = ".", editable = true }
torch-hd         = "*"
normflows        = ">=1.7.3"
auto-slurm       = { git = "https://github.com/the16thpythonist/AutoSlurm.git", rev = "aslurmx" }
pycomex          = ">=0.9.2"
rich-click       = ">=1.8.0"
jsonpickle       = ">=4.0.0"
python-decouple  = ">=3.6"

# CUDA ONLY for local-gpu env
[tool.pixi.feature.gpu.dependencies]
pytorch-cuda = "12.1.*"
libcurand    = "!=10.4.0.35"
